- Add MarkDownInputPreview() functions to preview <TEXTAREA> fields in functions/MarkDown.php & warehouse.js
- Add RequestedDate() function in Date.php
- Add PHPMailer 5.2.10 class (email creation & (SMTP) transport) in classes/PHPMailer/
- Add .logo CSS class & bigger logo.png definition
- Remove closing PHP tags ?> at end of files program wide

Changes in 2.8.11
-----------------
- Fix right arrow on menu hover when module text too long in stylesheet.css

Changes in 2.8.10
-----------------
- Add School Configuration english & spanish help texts in Help_en.php & Help_es.php
- Reference the Quick Setup Guide in README.md & INSTALL
- Update stylesheet_wkhtmltopdf.css

Changes in 2.8.9
----------------
- Attendance Codes Type & State Code required in AttendanceCodes.php
- Add Add No Subjects/Courses were found error in ReportCardComments.php
- Update french & spanish translations
- Bugfix ListOutput checkbox column: no sorting icon in stylesheet.css

Changes in 2.8.8
----------------
- Admin menu: div + table to nested ul in Side.php
- Add sub-menu display on mouse over in stylesheet.css & colors.css
- adjust Side.php submenu bottom offset + simplify openMenu() in warehouse.js
- listOutput sorting icon in stylesheet.css
- Use Character arrow instead of CSS arrow in stylesheet.css
- Simplify switchMenu() in warehouse.js
- Add .switchMenu class & remove CSS arrow in Search.fnc.php, StaffWidgets.fnc.php & Widgets.fnc.php

Changes in 2.8.7
----------------
- Fix #101 cookie domain if RosarioSIS installed at server www root in Warehouse.php

Changes in 2.8.6
----------------
- Beautify + JSHint in warehouse.js
- Comment & format, then CSSLint + Autoprefixer in stylesheet.css & colors.css
- Remove abbreviations + change orientation to landscape in AttendanceSummary.php
- Update french & spanish translations
- Concatenate and minify plugins.min.js (jquery.form.js + main16.js + calendar.js + calendar-setup.js)