@@ -168,7 +168,7 @@ function ajaxSuccess(data, target, url) {
 	//http://stackoverflow.com/questions/5525890/how-to-change-url-after-an-ajax-request#5527095
 	$('#' + target).html(data);
 
-	if (history.pushState && target == 'body') history.pushState(null, document.title, url);
+	if (history.pushState && target == 'body' && document.URL != url) history.pushState(null, document.title, url);
 
 	ajaxPrepare('#' + target);
 }
@@ -207,10 +207,13 @@ $(document).ajaxStop(function () {
 window.onload = function () {
 	ajaxPrepare('');
 
-	//reload page after browser history
+	//load body after browser history
 	if (history.pushState) window.setTimeout(function () {
 		window.addEventListener('popstate', function (e) {
-			document.location.href = document.URL;
+			var pop = document.createElement('a');
+			pop.target = 'body';
+			pop.href = document.URL;
+			ajaxLink(pop);
 		}, false);
 	}, 1);
 };
