@@ -11,6 +11,7 @@ Changes in 2.9
 - Add PHPMailer 5.2.10 class (email creation & (SMTP) transport) in classes/PHPMailer/
 - Add .logo CSS class & bigger logo.png definition
 - Remove closing PHP tags ?> at end of files program wide
+- Load body after browser history in warehouse.js
 
 Changes in 2.8.11
 -----------------
